--- a/client/package.json
+++ b/client/package.json
@@ -4,14 +4,17 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.6.9",
+    "@react-google-maps/api": "^2.12.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "echarts": "^5.3.3",
     "echarts-for-react": "^3.0.2",
+    "google-map-react": "^2.2.0",
     "graphql": "^16.5.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-calendar": "^3.7.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
@@ -42,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@iconify/react": "^3.2.2",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.6"
