--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@apollo/client": "^3.6.9",
     "@react-google-maps/api": "^2.12.1",
+    "@stripe/react-stripe-js": "^1.9.0",
+    "@stripe/stripe-js": "^1.33.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
